<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/my_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/my_info_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/my_info_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_info_title"
        android:layout_marginTop="24dp"
        android:layout_toLeftOf="@+id/my_info_title"
        android:text="@string/my_info_fullname_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/my_info_idnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/my_info_fullname"
        android:layout_below="@+id/my_info_fullname"
        android:layout_marginTop="21dp"
        android:text="@string/my_info_idnumber_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/my_info_course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/my_info_idnumber"
        android:layout_below="@+id/my_info_idnumber"
        android:layout_marginTop="25dp"
        android:text="@string/my_info_course_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/my_info_paa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/my_info_course"
        android:layout_centerVertical="true"
        android:text="@string/my_info_paa_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/my_info_paa_availability_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/my_info_paa"
        android:layout_below="@+id/my_info_paa"
        android:layout_marginTop="20dp"
        android:text="@string/paa_availability_times"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>