<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp" >

        <TableLayout
            android:id="@+id/appointments_table_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="0,1" >
        </TableLayout>
    </ScrollView>

    <TextView
        android:id="@+id/myappointments_paa_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/myappointments_time"
        android:layout_below="@+id/myappointments_time"
        android:layout_marginTop="20dp"
        android:text="@string/appointment_paa_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/myappointments_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/myappointments_date"
        android:layout_below="@+id/myappointments_date"
        android:layout_marginTop="20dp"
        android:text="@string/appointment_time"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/myappointments_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="80dp"
        android:text="@string/appointment_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/myappointments_appointment_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/myappointments_date"
        android:layout_alignLeft="@+id/myappointments_date"
        android:layout_marginBottom="38dp"
        android:text="@string/appointment_id"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/appointments_cancel_appointment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="cancelAppointment"
        android:text="@string/appointments_cancel" />

    <TextView
        android:id="@+id/appointments_selected_appointment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/appointments_cancel_appointment_button"
        android:layout_marginBottom="40dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>