<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_username"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity$DummySectionFragment" >

    <EditText
        android:id="@+id/register_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ellipsize="start"
    	android:gravity="center_horizontal"
    	android:hint="@string/username_hint"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

<!--     <TextView
        android:id="@+id/register_password_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_user"
        android:layout_centerHorizontal="true"
        android:text="@string/password_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" /> -->

    <EditText
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_user"
        android:ellipsize="start"
    	android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:hint="@string/password_hint"
        android:ems="10"
        android:inputType="textPassword" />

 <!--    <TextView
        android:id="@+id/first_name_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_centerHorizontal="true"
        android:text="@string/first_name"
        android:textAppearance="?android:attr/textAppearanceMedium" /> -->

    <EditText
        android:id="@+id/register_fullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_centerHorizontal="true"
        android:ellipsize="start"
    	android:gravity="center_horizontal"
    	android:hint="@string/first_name"
        android:ems="10"
        android:inputType="textPersonName" />

	     <TextView
        android:id="@+id/register_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_password"
        android:layout_below="@+id/register_button"
        android:layout_marginTop="20dp"
        android:text="@string/error"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#D92546" /> 

    <!-- <TextView
        android:id="@+id/register_username_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/register_password_hint"
        android:text="@string/username_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" /> -->

    <Spinner
        android:id="@+id/courses_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_fullname"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/register_idnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/register_password"
        android:layout_below="@+id/courses_spinner"
        android:ellipsize="start"
   		android:gravity="center_horizontal"
   		android:hint="@string/id_number"
        android:ems="10"
        android:inputType="number" />

<!--     <TextView
        android:id="@+id/course_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_fullname"
        android:layout_centerHorizontal="true"
        android:text="@string/course"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/id_number_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/courses_spinner"
        android:layout_centerHorizontal="true"
        android:text="@string/id_number"
        android:textAppearance="?android:attr/textAppearanceMedium" /> -->

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_idnumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:onClick="register"
        android:text="@string/register_button" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_idnumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:ellipsize="start"
   		android:gravity="center_horizontal"
        android:hint="@string/email"
        android:ems="10"
        android:inputType="textEmailAddress" />

</RelativeLayout>