	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity$DummySectionFragment" >

	    	<!-- <TextView
		    android:id="@+id/username_hint"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/login_username"
		    android:layout_alignParentTop="true"
		    android:layout_marginTop="25dp"
		    android:layout_marginLeft="50dp"
		    android:text="@string/username_hint"
		    android:textAppearance="?android:attr/textAppearanceMedium" /> -->

		<!-- <TextView
		    android:id="@+id/password_hint"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/username_hint"
		    android:layout_below="@+id/login_username"
		    android:layout_marginTop="16dp"
		    android:text="@string/password_hint"
		    android:textAppearance="?android:attr/textAppearanceMedium" /> -->

		<EditText
		    android:id="@+id/login_password"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/login_username"
		    android:layout_below="@+id/login_username"
		    android:layout_marginTop="16dp"
		    android:ellipsize="start"
  			android:gravity="center_horizontal"
		    android:ems="10"
		    android:inputType="textPassword"
		    android:hint="@string/password_hint" />

		<Button
		    android:id="@+id/buttonLogin"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_below="@+id/login_password"
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="59dp"
		    android:onClick="login"
		    android:text="@string/login_button" />

		<EditText
		    android:id="@+id/login_username"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:ellipsize="start"
  			android:gravity="center_horizontal"
		    android:layout_centerHorizontal="true"
		    android:layout_marginTop="17dp"
		    android:ems="10"
		    android:inputType="text" 
		    android:hint="@string/username_hint">

		    <requestFocus />
		</EditText>

		<TextView
		    android:id="@+id/login_err"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignLeft="@+id/login_password"
		    android:layout_below="@+id/buttonLogin"
		    android:layout_marginTop="21dp"
		    android:text="@string/error"
		    android:textAppearance="?android:attr/textAppearanceMedium"
		    android:textColor="#D92546" >
		    </TextView>
		    

</RelativeLayout>
